--- a/src/main/resources/fxml/main-view.fxml
+++ b/src/main/resources/fxml/main-view.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.klauncher.launcher.controllers.MainController">
@@ -14,37 +10,123 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <!-- Título -->
-    <Label fx:id="welcomeText" text="Karrito Launcher" textAlignment="CENTER">
-        <font>
-            <Font name="System Bold" size="24.0" />
-        </font>
-    </Label>
+    <!-- Header con título y configuración -->
+    <HBox alignment="CENTER" spacing="10.0">
+        <Label fx:id="welcomeText" text="Karrito Launcher" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font>
+        </Label>
 
-    <!-- Formulario de usuario -->
-    <VBox alignment="CENTER" spacing="15.0">
-        <Label text="Nombre de usuario:" />
-        <TextField fx:id="usernameField" maxWidth="300.0" promptText="Ingrese su nombre de usuario" />
+        <Region HBox.hgrow="ALWAYS" />
 
-        <!-- Botones -->
+        <Button fx:id="settingsButton" mnemonicParsing="false" onAction="#onSettingsButtonClick"
+                text="⚙" prefWidth="35.0" prefHeight="35.0">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Button>
+    </HBox>
+
+    <!-- Selector de perfil -->
+    <VBox alignment="CENTER" spacing="10.0">
+        <Label text="Perfil de usuario:" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font>
+        </Label>
+
         <HBox alignment="CENTER" spacing="10.0">
-            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick" text="Iniciar Sesión" />
-            <Button fx:id="playButton" mnemonicParsing="false" onAction="#onPlayButtonClick" text="Jugar" />
+            <ComboBox fx:id="profileSelector" prefWidth="250.0" promptText="Selecciona un perfil" />
+            <Button fx:id="createProfileButton" mnemonicParsing="false" onAction="#onCreateProfileButtonClick"
+                    text="➕" prefWidth="35.0" prefHeight="30.0" />
         </HBox>
-    </VBox>
 
-    <!-- Barra de progreso -->
-    <ProgressBar fx:id="downloadProgress" maxWidth="400.0" prefWidth="400.0" progress="0.0" />
-
-    <!-- Estado -->
-    <Label fx:id="statusLabel" text="Listo para comenzar" textAlignment="CENTER" />
-
-    <!-- Información adicional -->
-    <VBox alignment="CENTER" spacing="5.0">
-        <Label text="Versión 1.0.0" textFill="GREY">
+        <!-- Información del perfil -->
+        <Label fx:id="profileInfoLabel" text="" textAlignment="CENTER" textFill="GRAY">
             <font>
                 <Font size="10.0" />
             </font>
         </Label>
+    </VBox>
+
+    <!-- Separador visual -->
+    <Separator prefWidth="400.0" />
+
+    <!-- Formulario de autenticación -->
+    <VBox alignment="CENTER" spacing="15.0">
+        <Label text="Autenticación:" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font>
+        </Label>
+
+        <!-- Campo de usuario (solo para offline) -->
+        <VBox alignment="CENTER" spacing="5.0">
+            <Label text="Nombre de usuario:" />
+            <TextField fx:id="usernameField" maxWidth="300.0" promptText="Ingrese su nombre de usuario" />
+        </VBox>
+
+        <!-- Botón de login -->
+        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick"
+                text="Iniciar Sesión" prefWidth="200.0" prefHeight="35.0">
+            <font>
+                <Font name="System Bold" size="12.0" />
+            </font>
+        </Button>
+    </VBox>
+
+    <!-- Separador visual -->
+    <Separator prefWidth="400.0" />
+
+    <!-- Sección de juego -->
+    <VBox alignment="CENTER" spacing="15.0">
+        <Label text="Minecraft:" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font>
+        </Label>
+
+        <!-- Botón de jugar -->
+        <Button fx:id="playButton" mnemonicParsing="false" onAction="#onPlayButtonClick"
+                text="🎮 JUGAR" prefWidth="250.0" prefHeight="45.0"
+                style="-fx-font-size: 16px; -fx-font-weight: bold;">
+        </Button>
+
+        <!-- Barra de progreso -->
+        <ProgressBar fx:id="downloadProgress" maxWidth="400.0" prefWidth="400.0" progress="0.0" />
+
+        <!-- Estado/mensajes -->
+        <Label fx:id="statusLabel" text="Listo para comenzar" textAlignment="CENTER"
+               wrapText="true" maxWidth="450.0">
+            <font>
+                <Font size="12.0" />
+            </font>
+        </Label>
+    </VBox>
+
+    <!-- Footer con información -->
+    <VBox alignment="CENTER" spacing="5.0" VBox.vgrow="ALWAYS">
+        <Region VBox.vgrow="ALWAYS" />
+
+        <HBox alignment="CENTER" spacing="20.0">
+            <Label text="Versión 1.0.0" textFill="GREY">
+                <font>
+                    <Font size="10.0" />
+                </font>
+            </Label>
+
+            <Label text="•" textFill="GREY">
+                <font>
+                    <Font size="10.0" />
+                </font>
+            </Label>
+
+            <Label text="KLauncher Team" textFill="GREY">
+                <font>
+                    <Font size="10.0" />
+                </font>
+            </Label>
+        </HBox>
     </VBox>
 </VBox>
